@@ -27,8 +27,10 @@ bzr-builddeb (2.5.1) UNRELEASED; urgency=low
   * When adding a changelog entry, support git and svn snapshots.
   * Automatically use debian/source/format if package is native. Closes:
     #586617
+  * If possible use uscan to find the latest upstream version string.
+    LP: #295274
 
- -- Jelmer Vernooij <jelmer@debian.org>  Wed, 12 Jan 2011 22:05:40 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Sun, 23 Jan 2011 20:47:57 -0800
 
 bzr-builddeb (2.5) unstable; urgency=low
 
